# dune-multidomaingrid

./: .gitignore  CMakeLists.txt  COPYING  COPYING.md  Makefile.am  README  README.GIT  README.GIT.md  README.md  RELEASE_NOTES  RELEASE_NOTES.md  config.h.cmake  configure.ac  dune-multidomaingrid-config.cmake.in  dune-multidomaingrid.pc.in  dune.module
cmake/pkg/: dune-multidomaingrid-config.cmake.in
doc/: Makefile.am
doc/doxygen/: .gitignore  Doxyfile  Doxyfile.in  Doxylocal  Makefile.am
dune/: Makefile.am
dune/grid/: CMakeLists.txt  Makefile.am  multidomaingrid.hh
dune/grid/multidomaingrid/: CMakeLists.txt  Makefile.am  allsubdomaininterfacesiterator.hh  arraybasedset.hh  entity.hh  entitypointer.hh  geometry.hh  gridview.hh  hierarchiciterator.hh  hostgridaccessor.hh  idsets.hh  indexset.hh  indexsets.hh  intersection.hh  intersectioniterator.hh  iterator.hh  leafiterator.hh  leveliterator.hh  localgeometry.hh  mdgridtraits.hh  multidomaingrid.hh  multidomainmcmgmapper.hh  singlevalueset.hh  subdomaininterfaceiterator.hh  subdomainset.hh  subdomaintosubdomaininterfaceiterator.hh  utility.hh
dune/grid/multidomaingrid/subdomaingrid/: CMakeLists.txt  Makefile.am  entity.hh  entitypointer.hh  geometry.hh  gridview.hh  hierarchiciterator.hh  idsets.hh  indexsets.hh  intersection.hh  intersectioniterator.hh  iterator.hh  leafiterator.hh  leveliterator.hh  localgeometry.hh  subdomaingrid.hh  subdomaingridpointer.hh
m4/: CMakeLists.txt  Makefile.am  dune-multidomaingrid.m4
test/: .gitignore  CMakeLists.txt  Makefile.am  iterateallinterfaces.cc  multidomain-leveliterator-bug.cc  output.hh  profilerepartitioning.cc  test-wrapper.cc  testadaptation.cc  testintersectionconversion.cc  testintersectiongeometrytypes.cc  testlargedomainnumbers.cc  testparallel.cc  testpartitioning.cc  testsubdomainset.cc  testwrapper.cc
tests/: .gitignore  CMakeLists.txt  Makefile.am  iterateallinterfaces.cc  multidomain-leveliterator-bug.cc  output.hh  profilerepartitioning.cc  test-wrapper.cc  testadaptation.cc  testindexset.cc  testintersectionconversion.cc  testintersectiongeometrytypes.cc  testlargedomainnumbers.cc  testparallel.cc  testpartitioning.cc  testsubdomainset.cc  testwrapper.cc
