multidomaingriddir = $(includedir)/dune/grid/multidomaingrid

multidomaingrid_HEADER = \
    allsubdomaininterfacesiterator.hh \
    arraybasedset.hh \
    entity.hh \
    entitypointer.hh \
    geometry.hh \
    gridview.hh \
    hierarchiciterator.hh \
    hostgridaccessor.hh \
    idsets.hh \
    indexsets.hh \
    intersection.hh \
    intersectioniterator.hh \
    iterator.hh \
    localgeometry.hh \
    mdgridtraits.hh \
    multidomaingrid.hh \
    multidomainmcmgmapper.hh \
    singlevalueset.hh \
    subdomaininterfaceiterator.hh \
    subdomainset.hh \
    subdomaintosubdomaininterfaceiterator.hh \
    utility.hh

SUBDIRS = subdomaingrid

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
