#install headers
install(FILES
    entity.hh
    entitypointer.hh
    geometry.hh
    gridview.hh
    hierarchiciterator.hh
    idsets.hh
    indexsets.hh
    intersection.hh
    intersectioniterator.hh
    leafiterator.hh
    leveliterator.hh
    localgeometry.hh
    subdomaingrid.hh
  DESTINATION include/dune/grid/multidomaingrid/subdomaingrid)
