subdomaingriddir = $(includedir)/dune/grid/multidomaingrid/subdomaingrid

subdomaingrid_HEADER = \
    entity.hh \
    entitypointer.hh \
    geometry.hh \
    gridview.hh \
    hierarchiciterator.hh \
    idsets.hh \
    indexsets.hh \
    intersection.hh \
    intersectioniterator.hh \
    leafiterator.hh \
    leveliterator.hh \
    localgeometry.hh \
    subdomaingrid.hh

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
